# math

./: .gitignore  main.tex  pyproject.toml  requirements.txt
anomaly_detection/iforest/: doc.md  main.ipynb
anomaly_detection/inne/: doc.md  main.ipynb
anomaly_detection/lof/: main.ipynb
bayes/: main.ipynb
decision_tree/: decision_tree.py  train.ipynb  train.py
fisher/: main.ipynb
gnn/: 6_1.ipynb  6_2.ipynb  6_3.ipynb
lightgbm/: README.md  demo_goss_vs_efb.py  demo_grow_strategy.py  efb.ipynb  efb.py  gbdt.py  gdbt.ipynb  goss.ipynb  goss.py  goss_chatgpt.py  grow_strategy.ipynb  h_tune.ipynb  main.ipynb
lightgbm/data/: boston.csv
optimazer/: gd.py
shap/oss/: kernel.ipynb  tree.ipynb
test/wilcoxon/: main.ipynb
time_series/: m_quote.csv  main.ipynb
xgboost/: sparsity_aware.py  split_finding.py
