[tool.poetry]
name = "ml-sandbox"
version = "0.1.0"
description = ""
authors = ["shyu61 <ohs6261@gmail.com>"]
readme = "README.md"
# packages = [{include = "ml_sandbox"}]

[tool.poetry.dependencies]
python = "3.11.2"
numpy = "^1.24.3"
pandas = "^2.0.1"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
xgboost = "^1.7.5"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
ipykernel = "^6.23.0"
ipython = "^8.13.2"
networkx = "^3.1"
torch = "^2.0.1"
lightgbm = "^3.3.5"
pgmpy = "^0.1.22"
graphviz = "^0.20.1"
streamlit = "^1.22.0"
torch-geometric = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
